# ISI

./: README.md  docker-compose.yml  tasks.py
Camunda_partyOrganizer/: README.md  camunda-db.mv.db
Camunda_partyOrganizer/src/main/java/org/example/: CamundaApplication.java  GetDrinkClient.java  GetDrinkFromList.java  GetNoDrinkClient.java  ProcessConstants.java
MuleSoft ESB/isi/: README.md  README.txt  pom.xml
MuleSoft ESB/isi/src/main/resources/examples/: apiTranslatorSchemaExample.json  (+1 more)
backend/: .env.example  Dockerfile  README.md  db_1.sqlite3  db_2.sqlite3  db_django1.sqlite3  db_django2.sqlite3  entrypoint.sh  pyproject.toml
backend/app/: settings.py  settings1.py  settings2.py  settings_common.py  urls.py
backend/drinks/: admin.py  models.py  serializers.py  urls.py  views.py
backend/drinks/migrations/: 0001_initial.py  0002_drinkenquiry_delete_drinkrequest.py
backend/orders/: admin.py  models.py  serializers.py  urls.py  views.py
backend/orders/migrations/: 0001_initial.py
camunda/: .gitignore  README.md  camunda-db.mv.db  pom.xml
camunda/src/main/resources/: process.bpmn
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.js  JsonCard.js  LanguagePicker.js  Styles.js  index.css  index.js
mulesoft/: Dockerfile  README.md
mulesoft/apps/isi_working/: application-types.xml  isi.xml
mulesoft/src/main/mule/: isi.xml
mulesoft/src/main/resources/: log4j2.xml
mulesoft/src/main/resources/examples/: outputFromTranslatorExample.json
translate/: Dockerfile  README.md  main.py  pyproject.toml
(+3 files in other folders)
